--- a/style/betterize.css
+++ b/style/betterize.css
@@ -2,7 +2,7 @@
 /* --------------------------------------------------------------------------- /
 /* betterize.css - Opinionated normalization for better cross-browser design - /
 /* @author Stephen M Irving -- <@metric_dev> --------------------------------- /
-/* @version 0.9.9 02/27/2024 ------------------------------------------------- /
+/* @version 1.0.0 03/12/2024 ------------------------------------------------- /
 /* --------------------------------------------------------------------------- /
 /* ////////////////////////////////////////////////////////////////////////// */
 
@@ -72,24 +72,19 @@ html {
   text-shadow: none;
 }
 
-/*
- * Get rid of the default focus that can activate with the mouse and makes the
- * default keyboard focus styling look the same on all elements
- * and across all modern browsers with :-moz-focusring and :focus-visible
- */
-
-:focus {
-  outline: 0;
-}
+// Mozilla focus rings can look a little bit closer to the element than the
+// ring set in other browsers by `:focus-visible`. To normalize that, the
+// `:-moz-focusring` selector comes after the standardized `:focus-visible`.c
+// TODO: Change the outline color to something that matches your design.
 
 :focus-visible {
   outline: 2px solid #000;
-  outline-offset: 2px;
+  outline-offset: 3px;
 }
 
 :-moz-focusring {
   outline: 2px solid #000;
-  outline-offset: 3px;
+  outline-offset: 4px;
 }
 
 body {
@@ -97,8 +92,6 @@ body {
   min-height: 100vh;
   min-height: 100dvh;
   margin: 0;
-  background: hsl(0 0% 94.9%);
-  color: #222;
   text-rendering: optimizeSpeed;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -544,7 +537,7 @@ svg:not([fill]) {
 
 .clearfix::before,
 .clearfix::after {
-  content: ' ';
+  content: '';
   display: table;
 }
 
