--- a/style/print.less
+++ b/style/print.less
@@ -1,12 +1,12 @@
 ////////////////////////////////////////////////////////////////////////////////
-//
-// #PRINT STYLES - ver. 0.9.9
-//
-// Append these styles to the bottom of your stylesheet and make any
-// changes necessary to your project from there. Minimizing the total
-// number of linked CSS files is recommended for reducing page load speed as
-// it minimizes the amount of HTTP requests.
-//
+///                                                                          ///
+/// #PRINT STYLES - @version 1.0.0                                           ///
+///                                                                          ///
+/// Append these styles to the bottom of your stylesheet and make any        ///
+/// changes necessary to your project from there. Minimizing the total       ///
+/// number of linked CSS files is recommended for reducing page load         ///
+/// speed, as it reduces the total quantity of HTTP requests.                ///
+///                                                                          ///
 ////////////////////////////////////////////////////////////////////////////////
 
 @media print {
