--- a/style/print.css
+++ b/style/print.css
@@ -1,10 +1,10 @@
 /*
- * #PRINT STYLES - ver. 0.9.9
+ * #PRINT STYLES - @version 1.0.0
  *
  * Append these styles to the bottom of your stylesheet and make any
  * changes necessary to your project from there. Minimizing the total
- * number of CSS files is recommended for reducing page load speed as
- * it minimizes the amount of HTTP requests.
+ * number of CSS files is recommended for reducing page load speed,
+ * as it reduces the total quantity of HTTP requests.
  *
 */
 
