--- a/style/betterize.css
+++ b/style/betterize.css
@@ -2,7 +2,7 @@
 /* --------------------------------------------------------------------------- /
 /* betterize.css - Opinionated normalization for better cross-browser design - /
 /* @author Stephen M Irving -- <@metric_dev> --------------------------------- /
-/* @version 1.0.0 03/12/2024 ------------------------------------------------- /
+/* @version 1.0.0 - 03/12/2024 ----------------------------------------------- /
 /* --------------------------------------------------------------------------- /
 /* ////////////////////////////////////////////////////////////////////////// */
 
