--- a/style/betterize.less
+++ b/style/betterize.less
@@ -1,9 +1,9 @@
 ////////////////////////////////////////////////////////////////////////////////
-// -------------------------------------------------------------------------- //
-// betterize.less - Opinionated normalization for better cross-browser design //
-// @author Stephen M Irving -- <@metric_dev> -------------------------------- //
-// @version 1.0.0 03/12/2024 ------------------------------------------------ //
-// -------------------------------------------------------------------------- //
+/// ------------------------------------------------------------------------- //
+/// betterize.less - Opinionated normalization, better cross-browser design - //
+/// @author Stephen M Irving -- <@metric_dev> ------------------------------- //
+/// @version 1.0.0 - 03/12/2024 --------------------------------------------- //
+/// ------------------------------------------------------------------------- //
 ////////////////////////////////////////////////////////////////////////////////
 
 html {
