--- a/style/_betterize.sass
+++ b/style/_betterize.sass
@@ -334,8 +334,7 @@ address
   opacity: 0.54
 
 ::placeholder
-  color: inherit
-  opacity: 0.54
+  color: rgba(0, 0, 0, 0.54)
 
 // Correct the cursor style of increment and decrement buttons in Chrome.
 
