--- a/style/_betterize.scss
+++ b/style/_betterize.scss
@@ -381,8 +381,7 @@ address {
 }
 
 ::placeholder {
-  color: inherit;
-  opacity: 0.54;
+  color: rgba(0, 0, 0, 0.54);
 }
 
 // Correct the cursor style of increment and decrement buttons in Chrome.
