--- a/style/betterize.css
+++ b/style/betterize.css
@@ -387,8 +387,7 @@ address {
 }
 
 ::placeholder {
-  color: inherit;
-  opacity: 0.54;
+  color: rgba(0, 0, 0, 0.54);
 }
 
 /* Correct the cursor style of increment and decrement buttons in Chrome. */
